@@ -33,13 +33,11 @@ public class CartItemsServlet extends HttpServlet {
         if (cookie != null) {
             offlineCartModel = new Gson().fromJson(new String(Base64.getDecoder().decode(cookie.getValue())), OfflineCartModel.class);
         }
-        System.out.println(offlineCartModel);
         ProductService productService = new ProductService();
         ArrayList<ProductDetailDataModel> products = new ArrayList<>();
         for (CartModel cartModel : offlineCartModel.getCartItems()) {
             products.add(productService.getProduct(cartModel.getProductId()));
-            products.get(products.size() - 1).setQuantity(cartModel.getQuantity());
-            System.out.println(cartModel);
+            products.getLast().setQuantity(cartModel.getQuantity());
         }
         response.getWriter().write(Base64.getEncoder().encodeToString(new Gson().toJson(products).getBytes()));
     }
@@ -52,6 +50,7 @@ public class CartItemsServlet extends HttpServlet {
         ArrayList<ProductDetailDataModel> products = new ArrayList<>();
         for (CartModel cartModel : cart) {
             products.add(productService.getProduct(cartModel.getProductId()));
+            products.getLast().setQuantity(cartModel.getQuantity());
         }
         response.getWriter().write(Base64.getEncoder().encodeToString(new Gson().toJson(products).getBytes()));
     }
